--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<h2>Meus Projetos</h2>
 	<div class="grid">
   	<div class="card">
-    	<img src="imagem-projeto1.jpg" alt="Projeto 1" />
+    	<img src="img.png" alt="Projeto 1" />
     	<h3>Projeto 1</h3>
     	<a href="https://natiriekes.github.io/Natiriekes.github.io-minhas-leituras/" target="_blank">Ver mais</a>
   	</div>
